[package]
name = "pars"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[dependencies]
ascii = { version = "1.1", default-features = false, optional = true }
icu_properties = { version = "1.5", optional = true }
pars-macros = { path = "macros" }

[features]
default = ["alloc", "ascii", "bytes", "unicode"]
alloc = ["ascii?/alloc"]
ascii = ["dep:ascii"]
bytes = []
unicode = ["dep:icu_properties"]

[[example]]
name = "arithmetic"
required-features = ["alloc", "unicode"]

[[example]]
name = "msgpack"
required-features = ["alloc", "bytes"]

[[example]]
name = "msgpack_alt"
required-features = ["alloc", "bytes"]

[workspace]
members = ["macros"]
