[package]
name = "pars"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
ascii = { version = "1.1", default-features = false, optional = true }
c0nst = "0.2.1"
icu_properties = { version = "2.0", optional = true }
pars-macros = { path = "macros" }

[features]
default = ["alloc", "ascii", "bytes", "unicode"]
alloc = ["ascii?/alloc"]
ascii = ["dep:ascii"]
bytes = []
unicode = ["dep:icu_properties"]
nightly = ["c0nst/nightly"]

[[example]]
name = "arithmetic"
required-features = ["alloc", "unicode"]

[[example]]
name = "msgpack"
required-features = ["alloc", "bytes"]

[workspace]
members = ["macros"]
